iptables - ingore state failure in chroot

--- a/roles/network/tasks/iptables.yml
+++ b/roles/network/tasks/iptables.yml
@@ -2,6 +2,7 @@
   service: name=firewalld
            enabled=no
            state=stopped
+  ignore_errors: yes
 
 - name: Install iptables service package
   yum: name=iptables-services
