lsusb + hostapd are installed in 2-common move tplink725 code to hostapd

--- a/roles/network/tasks/hostapd.yml
+++ b/roles/network/tasks/hostapd.yml
@@ -1,3 +1,13 @@
+- name: Check of the identifier for tplink725 is present
+  shell: "lsusb | grep 0bda:8179 | wc |gawk '{print $1}'"
+  register: usb_response
+  ignore_errors: true
+
+- name: Use compiled hostapd, and wpa_supplicant if tplink WM725M
+  set_fact:
+     wifi_id: tplink_WM725M
+     driver_name: rtl871xdrv
+  when:  usb_response.stdout|int > 0
 - name: Download substitute software
   get_url: url="{{ xsce_download_url }}/{{ item }}"  dest={{ downloads_dir}}/{{ item }}
   with_items:
