--- a/roles/1-prep/tasks/hw_discovery.yml
+++ b/roles/1-prep/tasks/hw_discovery.yml
@@ -5,9 +5,9 @@
   when:  ansible_cmdline["bcm2709.serial"]  is defined
   ignore_errors: true
 
+- include: raspberry_pi_2.yml
+  when: rpi_model != "none"
+
 - name: Discover if this is one of the XO models
   set_fact:
      xo_model: '{{ ansible_local["local_facts"]["xo_model"] }}'
-
-
-- include: hw_rpi2.yml
