--- a/roles/1-prep/tasks/detected_network.yml
+++ b/roles/1-prep/tasks/detected_network.yml
@@ -49,11 +49,11 @@
 
 # returns list of paths
 - name: Find gateway config based on device
-  shell: "egrep -rn {{ device_gw }} /etc/sysconfig/network-scripts/ifcfg* | gawk -F ':' '{print $1}'"
+  shell: "egrep -rn {{ xsce_wan_iface }} /etc/sysconfig/network-scripts/ifcfg* | gawk -F ':' '{print $1}'"
   register: ifcfg_gw_device
   ignore_errors: True
   changed_when: False
-  when: device_gw != "none"
+  when: xsce_wan_iface != "none"
 
 # last match wins
 - name: Setting has ifcfg gw based on device if found
@@ -133,7 +133,7 @@
 
 # LAN - pick non WAN's
 - name: Create list of  LAN (non wan) ifaces
-  shell: "/sbin/ip link show | grep -v -e wwlan -e ppp -e lo -e br0 -e tun -e {{ device_gw }} -e {{ ap_device }}| grep mtu | gawk -F: '{print $2}' "
+  shell: "/sbin/ip link show | grep -v -e wwlan -e ppp -e lo -e br0 -e tun -e {{ discovered_wan_iface }} | grep mtu | gawk -F: '{print $2}' "
   register: lan_list_result
   ignore_errors: True
   changed_when: false
@@ -148,7 +148,7 @@
       - "{{ lan_list_result.stdout_lines }}"
 
 - name: Count LAN ifaces
-  shell: "/sbin/ip link show | grep -v  -e wwlan -e ppp -e lo -e br0 -e tun -e {{ device_gw }} -e {{ ap_device }}| grep mtu | wc | gawk '{print $1}'"
+  shell: "/sbin/ip link show | grep -v  -e wwlan -e ppp -e lo -e br0 -e tun -e {{ discovered_wan_iface }} | grep mtu | wc | gawk '{print $1}'"
   register: num_lan_interfaces_result
   ignore_errors: True
   changed_when: false
