--- a/roles/1-prep/tasks/computed_vars.yml
+++ b/roles/1-prep/tasks/computed_vars.yml
@@ -90,7 +90,7 @@
   set_fact:
     no_NM_reload: True
     is_CentOS: True
-  when: ansible_distribution_release == "based on Fedora 18" or ansible_distribution_version == "18"
+  when: ansible_distribution == "CentOS"
 
 - name: Set kiwix source file name i686
   set_fact:
