--- a/installer/livecd/Fedora-22/ks.cfg
+++ b/installer/livecd/Fedora-22/ks.cfg
@@ -13,6 +13,7 @@ selinux --disabled
 firewall --disabled
 network --hostname=schoolserver --device=link
 %packages
+@basic-desktop
 wget
 git
 ansible
