enable xsce-prep - leave anaconda - use graphical

--- a/installer/livecd/Fedora-22/ks.cfg
+++ b/installer/livecd/Fedora-22/ks.cfg
@@ -151,12 +151,12 @@ EOF
 
 # now make xsce-prep active
 chmod 755 /etc/rc.d/init.d/xsce-prep
-#chkconfig --add xsce-prep
-#systemctl enable xsce-prep
-#restorecon /etc/rc.d/init.d/xsce-prep
+chkconfig --add xsce-prep
+systemctl enable xsce-prep
+restorecon /etc/rc.d/init.d/xsce-prep
 
 # not sure why anaconda service is running without intervention
-systemctl disable anaconda
+#systemctl disable anaconda
 
 cat > /usr/bin/xsceinst << FOE
 #!/usr/bin/bash
@@ -168,7 +168,7 @@ if ! [ x\$results = x ]; then
     kill -9 \$results > /dev/null
     anaconda-cleanup
 fi
-liveinst -T
+liveinst -G
 FOE
 chmod 755 /usr/bin/xsceinst
 
