--- a/roles/network/tasks/main.yml
+++ b/roles/network/tasks/main.yml
@@ -49,13 +49,13 @@
               regexp='^172\.18\.96\.1'
               line='172.18.96.1            {{ xsce_hostname }}.{{ xsce_domain }}      {{ xsce_hostname }}'
               state=present
-  when: xsce_lan_iface != "none"
+  when: xsce_lan_iface != "none" and not installing
 
 - name: Configure /etc/hosts without LAN
   lineinfile: dest=/etc/hosts
               regexp='^172\.18\.96\.1'
               state=absent
-  when: xsce_lan_iface == "none"
+  when: xsce_lan_iface == "none" and not installing
 
 - name: Configure /etc/hosts
   lineinfile: dest=/etc/hosts
