delay returning to release branch to pickup changed demo.ks

--- a/installer/livecd/Fedora-22/ks.cfg
+++ b/installer/livecd/Fedora-22/ks.cfg
@@ -103,7 +103,7 @@ EOF
 
 # get rid of custom local_vars
 git reset --hard 
-git checkout master
+#git checkout master
 
 #disable updates-testing
 sed -i 's|enabled=1|enabled=0|' /etc/yum.repos.d/fedora-updates-testing.repo
