--- a/roles/0-once/tasks/xo.yml
+++ b/roles/0-once/tasks/xo.yml
@@ -17,6 +17,7 @@
             section=main
             option=keepcache
             value=1
+  when: not installing
 
 - name: Keep docs when installing packages
   lineinfile: backup=yes
@@ -123,7 +124,7 @@
 
 - name: Reboot system
   command: /sbin/reboot
-  when: disabled_login.changed
+  when: disabled_login.changed and not installing
   ignore_errors: yes
   async: 300
   poll: 120
