--- a/install-init.yml
+++ b/install-init.yml
@@ -8,13 +8,10 @@
   - vars/default_vars.yml
   - vars/local_vars.yml
 
+  roles:
+      - { role: 0-once, tags: ['once'] }
+
   tasks:
-  - name: Create /etc/xsce
-    file: path=/etc/xsce
-          owner=root
-          group=root
-          mode=0755
-          state=directory
 
   - name: See if default config_vars.yml exists
     stat: path=/etc/xsce/config_vars.yml
