--- a/roles/0-once/tasks/main.yml
+++ b/roles/0-once/tasks/main.yml
@@ -1,3 +1,11 @@
+# Patch Fedora 21+ so usbmount works
+# Set flag to True that was initialized to False in role defaults
+# We can't undo this
+- name: Does udev need patching
+  set_fact:
+    udev_needs_patch: True
+  when: ansible_distribution == "Fedora" and ansible_distribution_version >= "21"
+
 - include: fl.yml
   tags:
     - download
