move yum to 0-once

--- a/roles/0-once/tasks/main.yml
+++ b/roles/0-once/tasks/main.yml
@@ -68,3 +68,9 @@
 
 - include: selinux.yml
   when: ansible_selinux["status"] != "disabled"
+
+- include: yum.yml
+- include: fedora.yml
+  when: ansible_distribution == "Fedora"
+ 
+- include: patch_udev.yml
