--- a/roles/0-once/tasks/main.yml
+++ b/roles/0-once/tasks/main.yml
@@ -26,7 +26,19 @@
             option=keepcache
             value=1
 
+- include: fedora.yml
+  when: ansible_distribution == "Fedora"
+
+- include: centos.yml
+  when: ansible_distribution == "CentOS"
+
+- include: yum.yml
+- include: patch_udev.yml
+
 # Put conditional includes for platforms here
+- include: xo.yml
+  when: xo_model != "none" or osbuilder is defined
+
 ##  DISCOVER PLATFORMS ######
 - name: Discover if this is a rpi2 -- if so it has a bcm2709 processor
   set_fact: 
@@ -59,22 +71,11 @@
            url={{ xsce_download_url }}/iwlwifi-8000C-13.ucode
   when:  usb_NUC6.stdout|int > 0
 
-- include: xo.yml
-  when: xo_model != "none" or osbuilder is defined
-  tags:
-    - xo
-
 # need to add proper download section and get the binary out of git
 - name: copy  the firmware for tplink WM752M
   copy: src=rtl8188eufw.bin dest=/lib/firmware/rtlwifi/
   when: wifi_id  ==  "tplink_WM725M" and xo_model == "none" and not rpi_model is defined
   ignore_errors: true
 
-- include: centos.yml
-  when: ansible_distribution == "CentOS"
-  tags:
-    - centos
-    - download
-
 - include: selinux.yml
-  when: ansible_version >= '2' and ansible_selinux or ansible_version < '2' and ansible_selinux['status'] != 'disabled'
+  when: ansible_version >= '2' and ansible_selinux or ansible_version < '2' and ansible_selinux['status'] != 'disable'
