--- a/roles/0-once/tasks/main.yml
+++ b/roles/0-once/tasks/main.yml
@@ -68,3 +68,9 @@
 
 - include: selinux.yml
   when: ansible_version >= '2' and ansible_selinux or ansible_version < '2' and ansible_selinux['status'] != 'disabled'
+
+- include: yum.yml
+- include: fedora.yml
+  when: ansible_distribution == "Fedora"
+ 
+- include: patch_udev.yml
