--- a/roles/0-once/defaults/main.yml
+++ b/roles/0-once/defaults/main.yml
@@ -1,1 +1,7 @@
 NUC6_firmware_needed: False
+udev_needs_patch: False
+installing: True
+xsce_lan_iface: "none"
+xsce_wan_iface: "none"
+gui_port: 80
+xsce_prepped: False
