do cmdsrv rpms and pip in 0-once

--- a/roles/0-once/tasks/main.yml
+++ b/roles/0-once/tasks/main.yml
@@ -72,5 +72,6 @@
 - include: yum.yml
 - include: fedora.yml
   when: ansible_distribution == "Fedora"
- 
+- include: cmdsrv.yml
+
 - include: patch_udev.yml
