do cmdsrv rpms and pip in 0-once

--- a/roles/0-once/tasks/main.yml
+++ b/roles/0-once/tasks/main.yml
@@ -33,6 +33,7 @@
   when: ansible_distribution == "CentOS"
 
 - include: yum.yml
+- include: cmdsrv.yml
 - include: patch_udev.yml
 
 # Put conditional includes for platforms here
