--- a/roles/0-once/tasks/main.yml
+++ b/roles/0-once/tasks/main.yml
@@ -1,25 +1,6 @@
-# Patch Fedora 21+ so usbmount works
-# Set flag to True that was initialized to False in role defaults
-# We can't undo this
-- name: Does udev need patching
-  set_fact:
-    udev_needs_patch: True
-  when: ansible_distribution == "Fedora" and ansible_distribution_version >= "21"
-
 - include: fl.yml
-  tags:
-    - download
-    - download2
-
 - include: prep.yml
-  tags:
-    - download
-
 - include: xsce_ini.yml
-  when: xsce_preload == "False"
-  tags:
-    - download
-
 - name: Keep yum cache
   ini_file: dest=/etc/yum.conf
             section=main
@@ -34,6 +15,18 @@
 
 - include: yum.yml
 - include: cmdsrv.yml
+
+- include: xo.yml
+  when: xo_model != "none" or osbuilder is defined
+
+# Patch Fedora 21+ so usbmount works
+# Set flag to True that was initialized to False in role defaults
+# We can't undo this
+- name: Does udev need patching
+  set_fact:
+    udev_needs_patch: True
+  when: ansible_distribution == "Fedora" and ansible_distribution_version >= "21"
+
 - include: patch_udev.yml
 
 # Put conditional includes for platforms here
@@ -59,8 +52,6 @@
 
 - include: hw_rpi2.yml
   when: rpi_model is defined and rpi_model == "rpi2"
-  tags:
-    - rpi2
 
 - name: Check if the identifier for intel's NUC6 builtin wifi is present
   shell: "lsusb | grep 8087:0a2b | wc |gawk '{print $1}'"
