--- a/roles/1-prep/tasks/raspberry_pi_2.yml
+++ b/roles/1-prep/tasks/raspberry_pi_2.yml
@@ -4,35 +4,16 @@
 # RTC requires a change to the device tree (and reboot)
 - name: Check for needing to enable i2c rtc device in config.txt
   lineinfile: dest=/boot/config.txt
-              line="dtoverlay=i2c-rtc,ds1307=on"
+              line="dtoverlay=i2c-rtc,ds3231=on"
               state=present
   register: rpiconfig
 
-# Works without this
-#- name: Load the modules for the RTC
-#  template: dest=/etc/modules-load.d/rtc.conf
-#            src=rtc.conf
-
-- name: Create rc.local file for instantiating connection to i2c RTC
-  lineinfile: dest=/etc/rc.d/rc.local
-              line="#!/bin/bash"
-              owner=root
-              group=root
-              mode=0755
-              create=yes
-  when:  rtc_id  == "DS3231"
-
-- name: Set the date from the hwclock
-  lineinfile: dest=/etc/rc.d/rc.local
-              line="hwclock --hctosys"
-              state=present
-  when:  rtc_id  == "DS3231"
-
-- name: Delete instantiation if rtc is removed
-  lineinfile: dest=/etc/rc.d/rc.local
-              regexp="/usr/bin/echo ds1307 0x68 > /sys/class/i2c-adapter/i2c-1/new_device"
-              state=absent
-  when:  rtc_id  != "DS3231"
+- name: Add a udev rule to transfer hwclock to system clock at dev creation
+  template: src=92-rtc-i2c.rule
+            dest=/etc/udev/rules.d/92-rtc-i2c.rule
+            owner:root
+            group:root
+            mode:0755
 
 - name: Reboot if the config.txt was changed
   command: /sbin/reboot
