--- a/roles/1-prep/tasks/computed_vars.yml
+++ b/roles/1-prep/tasks/computed_vars.yml
@@ -74,6 +74,12 @@
     udev_needs_patch: True
   when: ansible_distribution == "Fedora" and ansible_distribution_version >= "21"
 
+# Same patch for CentOS 7.2
+- name: Does udev need patching for Centos
+  set_fact:
+    udev_needs_patch: True
+  when: ansible_distribution == "CentOS" and ansible_distribution_version == "7.2.1511"
+
 # for various reasons the mysql service can not be enabled on fedora 20,
 # but 'mariadb', which is its real name can
 # on fedora 18 we need to use 'mysqld'
