--- a/roles/0-once/tasks/patch_udev.yml
+++ b/roles/0-once/tasks/patch_udev.yml
@@ -1,3 +1,17 @@
+# Patch Fedora 21+ so usbmount works
+# Set flag to True that was initialized to False in role defaults
+# We can't undo this
+- name: Does udev need patching
+  set_fact:
+    udev_needs_patch: True
+  when: ansible_distribution == "Fedora" and ansible_distribution_version >= "21"
+
+# Same patch for CentOS 7.2
+- name: Does udev need patching for Centos
+  set_fact:
+    udev_needs_patch: True
+  when: ansible_distribution == "CentOS" and ansible_distribution_version >= "7.2.1511"
+
 - name: Copy udevd service to /etc/systemd/system to modify
   copy: src=/usr/lib/systemd/system/systemd-udevd.service
         dest=/etc/systemd/system/systemd-udevd.service
