--- a/roles/0-once/defaults/main.yml
+++ b/roles/0-once/defaults/main.yml
@@ -1,3 +1,9 @@
+is_F18: False
+is_F20: False
+is_F21: False
+is_F22: False
+is_F23: False
+is_F24: False
 udev_needs_patch: False
 installing: True
 xsce_lan_iface: "none"
