--- a/roles/calibre/tasks/main.yml
+++ b/roles/calibre/tasks/main.yml
@@ -1,15 +1,15 @@
 - name: Get calibre setup file
-  get_url: 
-    url="{{ calibre_src_url }}" 
-    dest="{{ downloads_dir }}/calibre-installer.py" 
+  get_url:
+    url="{{ calibre_src_url }}"
+    dest="{{ downloads_dir }}/calibre-installer.py"
     mode=0755
   tags:
     download2
 
 - name: Install calibre
-  shell: "{{ downloads_dir }}/calibre-installer.py >> /dev/null" 
-  args: 
-    creates: /usr/bin/calibre-uninstall 
+  shell: "{{ downloads_dir }}/calibre-installer.py >> /dev/null"
+  args
+    creates: /usr/bin/calibre-uninstall
   tags:
     download2
 
