--- a/roles/calibre/tasks/main.yml
+++ b/roles/calibre/tasks/main.yml
@@ -8,7 +8,7 @@
 
 - name: Install calibre
   shell: "{{ downloads_dir }}/calibre-installer.py >> /dev/null"
-  args
+  args:
     creates: /usr/bin/calibre-uninstall
   tags:
     download2
