--- a/roles/0-once/tasks/fl.yml
+++ b/roles/0-once/tasks/fl.yml
@@ -40,6 +40,20 @@
     - "{{ xsce_zim_path }}/content"
     - "{{ xsce_zim_path }}/index"
 
+- name: Create directory for common packages
+  file: path={{ item }}
+        mode=0755
+        owner=root
+        group=root
+        state=directory
+  with_items:
+    - /var/www/html/common/css
+    - /var/www/html/common/js
+    - /var/www/html/common/fonts
+    - /var/www/html/common/html
+    - /var/www/html/common/images
+    - /var/www/html/common/assets
+
 - name: Create olpc-scripts directory
   file: path={{ item }}
         owner=root
