--- a/roles/0-once/tasks/yum.yml
+++ b/roles/0-once/tasks/yum.yml
@@ -11,8 +11,8 @@
   when: ansible_distribution == "Fedora" and ansible_distribution_version|int <= 24
 
 - name: Install yum packages
-  yum: name={{ item }}
-       state=present
+  package: name={{ item }}
+           state=present
   with_items:
    - yum-utils
    - createrepo
@@ -30,8 +30,8 @@
             mode=0644
 
 - name: Install common packages
-  yum: name={{ item }}
-       state=present
+  package: name={{ item }}
+           state=present
   with_items:
    - acpid
    - mlocate
@@ -60,18 +60,18 @@
   tags:
     - download
 
-#- name: Update common packages
-#  yum: name={{ item }}
-#       state=latest
-#  with_items:
-#   - NetworkManager
-#   - bash
-#   - iptables
-#   - vim-minimal # ejabberd erlang does not update this properly
-#   - dbus-glib   # NM does not update this properly
-#   - glibc # CVE-2015-7547
-#  tags:
-#    - download
+- name: Update common packages
+  package: name={{ item }}
+           state=latest
+  with_items:
+   - NetworkManager
+   - bash
+   - iptables
+   - vim-minimal # ejabberd erlang does not update this properly
+   - dbus-glib   # NM does not update this properly
+   - glibc # CVE-2015-7547
+  tags:
+    - download
 
 # instuctions state to start with a fully updated system before starting, stop using
 # ansible as a crutch for developers not following the directions and taking short-cuts
